PopUp Vertical align fix

--- a/SistemaOdontologico/css/style.css
+++ b/SistemaOdontologico/css/style.css
@@ -384,7 +384,7 @@ form div.ac {
 }
 
 #popup.hide {
-	top: -500px;
+	top: -500px !important; /* Avoid style inline problem */
 }
 
 #popup .icon-close {
